fixed image stretching

--- a/style.scss
+++ b/style.scss
@@ -48,6 +48,7 @@ $orange-letter: #ff4422;
         }
     }
     nav {
+        letter-spacing: 1px;
         .tnw-red {
             display: none;
         }
